--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 MONGODB_URI ='mongodb+srv://arinUser:Aforarin123%40@cluster0.74chtg2.mongodb.net/'
+CLERK_WEBHOOK_SECRET='whsec_8GGW8EmMIdlhf9j9DDp4kqZdlmyhnkP3'
+
